--- a/config/database.yml
+++ b/config/database.yml
@@ -23,25 +23,25 @@ default: &default
 
 development:
   <<: *default
-  database: GoalFunder_development
+  database: GoalFunder
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: GoalFunder
+  username: goalfunder
 
   # The password associated with the postgres role (username).
-  #password:
+  password: goalfunder
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  host: 127.0.0.1
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  #port: 5432
+  port: 5432
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -58,6 +58,10 @@ development:
 test:
   <<: *default
   database: GoalFunder_test
+  username: goalfunder
+  password: goalfunder
+  host: 127.0.0.1
+  port: 5432
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -78,8 +82,7 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+
+# Heroku URL configuration
 production:
-  <<: *default
-  database: GoalFunder_production
-  username: GoalFunder
-  password: <%= ENV['GOALFUNDER_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
