--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.11",
     "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "latest"
+    "webpack": "^4.43.0",
+    "yarn": "^1.22.4"
   },
   "version": "0.1.0",
   "devDependencies": {
